--- a/index.html
+++ b/index.html
@@ -42,5 +42,22 @@
             <p class="austria-p"><a href="Austria/austria.html">Austria</a></p>
         </div>
     </div>
+
+    <div class="Sweden">
+        <div class="Sweden-main">
+            <div class="Sweden-ho">
+                <div >
+
+                </div>
+            </div>
+
+            <div class="Sweden-ver">
+                <div>
+
+                </div>
+            </div>
+            <p class="Sweden-p"><a href="Sweden/sweden.html">Sweden</a></p>
+        </div>
+    </div>
 </body>
 </html>
